--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
   <section class="section-form">
     <h2>We're happy to hear from you</h2>
-    <form method="get" action="#" class="contact-form">
+    <form method="post" class="contact-form" name="My Form" data-netlify="true">
       <div class="form-grid">
         <div class="one-of-3">
           <label for="name">Name</label>
