modified index file
made the sign up buttons to lead to the form upon clicking

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             </ul>
           </div>
           <div>
-            <a href="#" class="btn btn-full">Sign up now</a>    
+            <a href="#name" class="btn btn-full">Sign up now</a>    
           </div>
         </div>
       </div>
@@ -293,7 +293,7 @@
             </ul>
           </div>
           <div>
-            <a href="#" class="btn btn-empty">Sign up now</a>    
+            <a href="#name" class="btn btn-empty">Sign up now</a>    
           </div>
         </div>
       </div>
@@ -314,7 +314,7 @@
             </ul>
           </div>
           <div>
-           <a href="#" class="btn btn-empty">Sign up now</a>    
+           <a href="#name" class="btn btn-empty">Sign up now</a>    
           </div>
         </div>
       </div>
